test/typecheck/fail/bitfield_bits_field.sail
default Order dec

$include <prelude.sail>

bitfield foo : bits(32) = {
  bits : 15 .. 0,
}
